k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-api-service
  labels:
    app: queue-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: queue-api
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
